force-app/main/default/objects/GymEvent__c/GymEvent__c.object-meta.xml
<CustomObject>
    <label>GymEvent</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>GymEvent ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GymEvents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>