force-app/main/default/objects/GymEvent__c/fields/Distance_m__c.field-meta.xml
<CustomField>
    <fullName>Distance_m__c</fullName>
    <label>Distance (m)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>