force-app/main/default/objects/GymEvent__c/fields/Workout_details__c.field-meta.xml
<CustomField>
    <fullName>Workout_details__c</fullName>
    <label>Workout details</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>